# AnalyticsForDirectories

./: .gitignore  CMakeLists.txt  Readme.md
src/: AnalyzerForDirectory.cpp  AnalyzerForDirectory.h  FileIterator.cpp  FileIterator.h  StatisticOfDirectory.cpp  StatisticOfDirectory.h  main.cpp  utils.cpp  utils.h
test/: AnalyzerForDirectory_tests.cpp  FileIterator_tests.cpp  StatisticOfDirectory_tests.cpp  utils.cpp
